tests/paczka1/small_fuzzy/52937886.err
Error in line 5: nCIZF A480 165,7
Error in line 10: nCIZF A480 78,7
